@@ -1,3 +1,9 @@
+2010-02-26  Abel Cheung  <abelcheung@gmail.com>
+
+	* notation/guido.php:
+	- Use more precise sizing and zoom ratio so that image will
+	  not look blurred.
+
 2010-02-25  Abel Cheung  <abelcheung@gmail.com>
 
 	* Initial shortcode support.
